[metadata]
name = encryptpy
url = https://github.com/amchii/encryptpy
version = attr: encryptpy.__version__
project_urls =
    Source = https://github.com/amchii/encryptpy
license = MIT
author = Amchii
author_email = finethankuandyou@gmail.com
description = Use Cython to compile Python code to binary and support git-diff to get changed files conveniently.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Compilers
