[metadata]
name = encryptpy
url = https://github.com/amchii/encryptpy
version = attr: encryptpy.__version__
project_urls =
    Source = https://github.com/amchii/encryptpy
license = MIT
author = Amchii
author_email = finethankuandyou@gmail.com
description = Use Cython to compile Python code to binary and support git-diff to get changed files conveniently.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Compilers

[flake8]
# E203 whitespace before ':'
# E266 Too many leading '#' for block comment
# E501,B950 Line too long
# W503 Line break occurred before a binary operator
# W504 line break after binary operator
# F405;403 Variable may be undefined; import * unable to detect undefined names
# C901 Function is too complex
# '# noqa' ignore in-line error
# '# flake8: noqa' ignore entire file
ignore = E203, E266, E402, E501, W503, W504, B950, F405, F403, C901
max-complexity = 50
select = B,C,E,F,W

[isort]
profile = black
skip = migrations
combine_as_imports = True
include_trailing_comma = True
multi_line_output = 3
